--- a/medium.css
+++ b/medium.css
@@ -271,7 +271,7 @@ section .headerTitles {
     background-color: rgba(0, 0, 0, 0);
     min-height: 75px;
     text-decoration: none;
-    color: whitesmoke;
+    color: #f5f5f5;
     text-transform: uppercase;
     font-size: 20px;
     letter-spacing: 4px;
@@ -371,6 +371,10 @@ section .headerTitles {
   body .wrapper .dietSection .dietContainer .redirectLink:hover .dietText {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
+  }
+  body .wrapper .footer .footerIcons .icon i {
+    font-size: 38px;
+    padding: 15px 20px;
   }
 }
 
