--- a/medium.sass
+++ b/medium.sass
@@ -1,3 +1,6 @@
+$main-web-color: #d5d838
+$main-font-color: #f5f5f5
+
 body
     p
         font-size: 18px
@@ -201,7 +204,7 @@ section
                         background-color: rgba(0,0,0,0)
                         min-height: 75px
                         text-decoration: none
-                        color: whitesmoke
+                        color: $main-font-color
                         text-transform: uppercase
                         font-size: 20px
                         letter-spacing: 4px
@@ -209,12 +212,12 @@ section
                         overflow: hidden
                         transition: color 0.2s, text-shadow 0.2s, background 0.2s
                     .menuLink:hover
-                        background: #d5d838
+                        background: $main-web-color
                         color: black
                         text-shadow: 0 0 1px black, 0 0 1px black
                     .menuLinkActive
-                        color: #d5d838
-                        text-shadow: 0 0 2px black, 0 0 2px #d5d838
+                        color: $main-web-color
+                        text-shadow: 0 0 2px black, 0 0 2px $main-web-color
         .wrapper
             .scroll-fix::before
                 content: ''
@@ -276,6 +279,13 @@ section
                         min-width: 750px
                     .redirectLink:hover .dietText
                         transform: scale(1.2)
+
+            .footer
+                .footerIcons
+                    .icon
+                        i
+                            font-size: 38px
+                            padding: 15px 20px
 
 @media (min-width: 1200px)
     body
