--- a/small.sass
+++ b/small.sass
@@ -1,3 +1,6 @@
+$main-web-color: #d5d838
+$main-font-color: #f5f5f5
+
 *
     box-sizing: border-box
     padding: 0
@@ -12,7 +15,7 @@
     background: #393a0f
     border-radius: 5px
 *::-webkit-scrollbar-thumb:hover
-    background: #d5d838
+    background: $main-web-color
 
 body::-webkit-scrollbar
     width: 10px
@@ -23,7 +26,7 @@ body
     scroll-behavior: smooth
 
     h1, h2, h3, p
-        color: whitesmoke
+        color: $main-font-color
 
     .modalDietContainer
         display: flex
@@ -38,7 +41,7 @@ body
         max-width: 900px
         transform: translateX(-50%)
         background: rgba(19, 19, 19, 0.96)
-        background-image: url(/imgs/modal_backgroundDark.jpg)
+        background-image: url(imgs/modal_backgroundDark.jpg)
         background-position: 50%
         background-size: cover
         background-repeat: no-repeat
@@ -65,7 +68,7 @@ body
             width: 85%
 
         .highlighted
-            color: #d5d838
+            color: $main-web-color
             font-weight: bold
 
         .btnModalExit
@@ -79,7 +82,7 @@ body
             background: none
 
             .exitModalIcon
-                color: #d5d838e8
+                color: $main-web-color
 
         h2, p, #dietInput
             text-align: center
@@ -101,13 +104,13 @@ body
             letter-spacing: 3px
             border: 1px solid grey
             border-radius: 25px
-            color: whitesmoke
+            color: $main-font-color
             font-size: 18px
 
         #dietInput:focus
             z-index: 1
             outline: none
-            border: 1px solid #d5d838
+            border: 1px solid $main-web-color
             transition: border 0.3s
 
         #dietInput::placeholder
@@ -165,7 +168,7 @@ body
 
             table, th, td
                 border-collapse: collapse
-                color: whitesmoke
+                color: $main-font-color
                 background-color: #242424
                 font-size: 16px
 
@@ -184,7 +187,7 @@ body
                     text-align: center
 
                     th
-                        background-color: #d5d838
+                        background-color: $main-web-color
                         text-align: left
                         padding: 15px 10px
                         color: black
@@ -277,7 +280,7 @@ body
                 box-shadow: 0px 0px 10px #202020
 
                 th
-                    background-color: #d5d838
+                    background-color: $main-web-color
 
                 .ownTableProductNameHead
                     width: 34%
@@ -322,7 +325,7 @@ body
 
                             .productValueInput:focus
                                 outline: none
-                                border: 1px solid #d5d838
+                                border: 1px solid $main-web-color
 
                     .emptyOwnTable
                         display: flex
@@ -418,7 +421,7 @@ body
         width: 90%
         max-width: 400px
         background: #1b1b1b
-        background-color: #d5d838e8
+        background-color: $main-web-color
         border-top-left-radius: 10px
         border-top-right-radius: 10px
         border-radius: 5px
@@ -511,12 +514,12 @@ body
 
                 i
                     font-size: 20px
-                    color: whitesmoke
+                    color: $main-font-color
                     transition: transform 0.8s, color 0.8s
 
                 .animationBars
                     transform: rotateZ(180deg)
-                    color: #d5d838
+                    color: $main-web-color
 
             .logo
                 display: grid
@@ -531,7 +534,7 @@ body
                     text-decoration: none
                     font-size: 20px
                     letter-spacing: 3px
-                    color: whitesmoke
+                    color: $main-font-color
                 img
                     padding-left: 10px
                     height: 25px
@@ -561,7 +564,7 @@ body
 
             a
                 text-decoration: none
-                color: whitesmoke
+                color: $main-font-color
                 text-align: center
 
             .menuIcon
@@ -572,11 +575,12 @@ body
                 transition: color 0.5s
 
             .activeSection
-                color: #d5d838
+                color: $main-web-color
                 font-weight: bolder
 
     .activateCollapse
         left: 0
+
 // hero-shadows for web
 .hero-shadow
     position: absolute
@@ -595,17 +599,19 @@ body
     position: relative
     z-index: 1
     overflow: hidden
-    background-image: url(/imgs/bg2_big.jpg)
+    background-image: url(imgs/bg2_big.jpg)
     background-position: 5%
     background-size: cover
     background-repeat: no-repeat
     background-attachment: fixed
     transition: filter 1s
+
     .scroll-fix::before // scroll-fix for nav
         content: ''
         display: block
         height: 100px
         margin-top: -50px
+
     .header
         display: flex
         flex-direction: column
@@ -618,6 +624,7 @@ body
         width: 100vw
         height: 100vh
         background: none
+
         h1
             text-align: center
             margin-bottom: 0
@@ -629,18 +636,20 @@ body
             text-shadow: 8px 8px 5px black
         span
             font-family: 'Pacifico', sans-serif
-            color: #d5d838
+            color: $main-web-color
             text-align: center
             font-size: 16px
             text-shadow: 3px 3px 6px black
             padding: 0px 0px
             margin-top: 0
             margin-bottom: 50px
+
 .errorBlurClose
     filter: blur(0)
     transition: filter 1s
 .errorBlurShow
     filter: blur(3px)
+
 section
     display: flex
     position: relative
@@ -648,8 +657,10 @@ section
     overflow: hidden
     height: 100%
     width: 100%
+
     .description
         margin: 20px 30px 0px 30px
+
     .headerTitle
         margin: 0px 30px
         padding: 30px 0px 20px 0px
@@ -657,9 +668,10 @@ section
         font-size: 22px
         text-transform: uppercase
         letter-spacing: 3px
+
         .headerIcons
             padding: 0 10px 0 0
-            color: #d5d838
+            color: $main-web-color
     .underline
         margin: 0px 30px
         height: 1px
@@ -670,7 +682,7 @@ section
         font-size: 20px
         margin: 20px 30px
     .highlighted
-        color: #d5d838
+        color: $main-web-color
         font-weight: bold
 .motivationSection
     .allQuotes
@@ -706,7 +718,7 @@ section
         width: 100px
         height: 40px
         text-align: center
-        background-color: #d5d838
+        background-color: $main-web-color
         box-shadow: 0px 5px 10px black
         border: none
         border-radius: 20px
@@ -739,19 +751,19 @@ section
             a
                 text-decoration: none
                 border: none
-                color: whitesmoke
+                color: $main-font-color
                 .firstArticle
-                    background-image: url(/imgs/article_podstawy.jpg)
+                    background-image: url(imgs/article_podstawy.jpg)
                 .secondArticle
-                    background-image: url(/imgs/article_zdrowiepsych.jpg)
+                    background-image: url(imgs/article_zdrowiepsych.jpg)
                 .thirdArticle
-                    background-image: url(/imgs/article_zmeczenie.jpg)
+                    background-image: url(imgs/article_zmeczenie.jpg)
                 .fourthArticle
-                    background-image: url(/imgs/article_sauna.jpg)
+                    background-image: url(imgs/article_sauna.jpg)
                 .fifthArticle
-                    background-image: url(/imgs/bledySmall.jpg)
+                    background-image: url(imgs/bledySmall.jpg)
                 .sixthArticle
-                    background-image: url(/imgs/burgerSmall.jpg)
+                    background-image: url(imgs/burgerSmall.jpg)
                 .artCard
                     align-self: center
                     margin: 30px auto
@@ -812,7 +824,7 @@ section
                     margin: 0 1.5px
                     padding: 10px 20px
                     background-color: #111111
-                    color: whitesmoke
+                    color: $main-font-color
                     border: none
                     transition: background-color 0.3s, padding 0.3s
                 .pageNext
@@ -919,7 +931,7 @@ section
                         display: block
                         .sourceLink
                             text-decoration: none
-                            color: whitesmoke
+                            color: $main-font-color
                 .firstSection
                     font-weight: bold
 
@@ -944,7 +956,7 @@ section
         .zIndex
             z-index: 10
         span
-            color: whitesmoke
+            color: $main-font-color
             font-size: 16px
             letter-spacing: 1px
             padding: 25px 10px
@@ -955,7 +967,7 @@ section
             transition: opacity 0.3s 2.2s, color 0.3s
 
         .clickToExtend:hover
-            color: #d5d838
+            color: $main-web-color
         .dropdownSpanChange
             opacity: 0
             transition: opacity 0.3s
@@ -1047,13 +1059,13 @@ section
                 background: linear-gradient(180deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,1) 95%)
                 transition: background-color 0.5s
         .backgroundCardio
-            background-image: url(/imgs/training_cardio3.jpg)
+            background-image: url(imgs/training_cardio3.jpg)
         .backgroundFitness
-            background-image: url(/imgs/trainign_fitness.jpg)
+            background-image: url(imgs/trainign_fitness.jpg)
         .backgroundStrength
-            background-image: url(/imgs/training_StrengthSMALL.jpg)
+            background-image: url(imgs/training_StrengthSMALL.jpg)
         .backgroundFunctional
-            background-image: url(/imgs/training_functional.jpg)
+            background-image: url(imgs/training_functional.jpg)
         .training:hover
             max-height: 800px
             border: 1px solid #606119
@@ -1080,13 +1092,13 @@ section
         a
             text-decoration: none
             border: none
-            color: whitesmoke
+            color: $main-font-color
             width: 100%
             z-index: 6
             .modalOwn
-                background-image: url(/imgs/dietCardModal.jpg)
+                background-image: url(imgs/dietCardModal.jpg)
             .redirect
-                background-image: url(/imgs/dietCardRedirect.jpg)
+                background-image: url(imgs/dietCardRedirect.jpg)
             .dietCard
                 align-self: center
                 height: 200px
@@ -1140,7 +1152,7 @@ section
                 font-weight: bolder
                 color: black
                 letter-spacing: 2px
-                background-color: #d5d838
+                background-color: $main-web-color
                 i
                     padding: 0px 0px 0px 10px
                     transition: transform 0.5s
@@ -1161,7 +1173,7 @@ section
                         color: white
                         transition: color 0.4s
                     .activeDropdownLinkColor
-                        color: #d5d838
+                        color: $main-web-color
         .dropdownHeightChange
             max-height: 215px
         .dropdownArrowChange
@@ -1187,7 +1199,7 @@ section
                     border-radius: 25px
                     border: 1px solid #0c0c0c
                     background-color: rgba(0,0,0,0.6)
-                    color: whitesmoke
+                    color: $main-font-color
                     box-shadow: 0px 0px 20px #050505
                     .calcInputContainer
                         display: grid
@@ -1217,7 +1229,7 @@ section
                             .male
                                 color: #3f66cf
                             .activeGender
-                                color: #d5d838
+                                color: $main-web-color
                                 font-size: 42px
                             .unactiveGender
                                 font-size: 28px
@@ -1245,11 +1257,11 @@ section
                             color: white
                         .activeInput
                             z-index: 100
-                            border: 1px solid #d5d838 !important
+                            border: 1px solid $main-web-color !important
                         .calcInput:focus
                             z-index: 1
                             outline: none
-                            border: 1px solid #d5d838
+                            border: 1px solid $main-web-color
                             transition: border 0.3s
                         .calcInput::placeholder
                             transition: color 0.3s
@@ -1300,7 +1312,7 @@ section
                                     border-radius: 20px
                                     max-height: 45px
                                     width: 180px
-                                    color: whitesmoke
+                                    color: $main-font-color
                                     text-align: center
                                     box-shadow: 0px 0px 20px #000
                                     z-index: 2
@@ -1339,23 +1351,23 @@ section
                                         transition: color 0.2s, border 0.3s, background-color 0.2s
 
                                     .choosenOptionActive
-                                        border-bottom: 1px solid #d5d838
-                                        background-color: #d5d838
+                                        border-bottom: 1px solid $main-web-color
+                                        background-color: $main-web-color
                                         color: black !important
                                         font-weight: bolder
 
                                     .optionActive
-                                        background-color: #d5d838
+                                        background-color: $main-web-color
                                         color: black
                                         font-weight: bolder
-                                        border-bottom: 1px solid #d5d838
+                                        border-bottom: 1px solid $main-web-color
 
                                 .dropdownKcalCalcActive
                                     max-height: 280px
                                     background-color: black
 
                                 .borderActivity
-                                    border: 1px solid #d5d838
+                                    border: 1px solid $main-web-color
 
                     .calcResultBtn
                         outline: none !important
@@ -1376,7 +1388,7 @@ section
                         text-transform: uppercase
                         letter-spacing: 2px
                         border-radius: 20px
-                        background-color: #d5d838
+                        background-color: $main-web-color
                         box-shadow: 0px 5px 10px black
                         z-index: 1
                         transition: box-shadow 0.11s, transform 0.1s
@@ -1396,7 +1408,7 @@ section
                         overflow: hidden
                         max-height: 0%
                         transition: max-height 0.5s, opacity 0.5s
-                        color: whitesmoke
+                        color: $main-font-color
 
                         .resultFullText
                             position: absolute
@@ -1421,10 +1433,10 @@ section
                                 gap: 5px
                                 padding: 10px 0px 0px 0px
                                 font-size: 26px
-                                color: whitesmoke
+                                color: $main-font-color
 
                             .highlightedResult
-                                color: #d5d838
+                                color: $main-web-color
                                 font-weight: bolder
 
                     .resultShow
@@ -1457,7 +1469,7 @@ section
                 border-radius: 0
                 font-size: 10px
                 .card-header
-                    background-color: #d5d838
+                    background-color: $main-web-color
                     padding: 0
                     h2
                         button
@@ -1511,7 +1523,7 @@ section
                 .card-body
                     font-size: 16px
                     font-family: 'Montserrat', sans-serif
-                    color: whitesmoke
+                    color: $main-font-color
 
             .show
                 font-size: 16px
@@ -1531,7 +1543,7 @@ section
     align-items: center
     padding: 10px
     border-top: 1px solid #1f1d1d
-    background-color: black
+    background-color: #030303
     margin: 0
 
     h3
@@ -1544,22 +1556,25 @@ section
         margin: 10px
         text-align: center
         .icon
-            border-radius: 100%
-            background: #161616
-            text-align: center
-            padding: 10px 15px
             margin: 0px 5px
-            font-size: 26px
             text-decoration: none
-            color: whitesmoke
-            transition: color 0.2s, background 0.2s
 
-        .icon:hover
-            color: black
-            background-color: #d5d838
+            i
+                font-size: 26px
+                color: $main-font-color
+                padding: 10px 15px
+                background-color: #141414
+                border-radius: 100%
+                border: 1px solid black
+                transition: color 0.2s, background-color 0.2s
+
+            i:hover
+                color: #141414
+                background-color: $main-web-color
+
     .copyright
-        color: whitesmoke
-        margin: 20px 0px
+        color: $main-font-color
+        margin: 15px 0px
 
 @keyframes refresher
     0%
@@ -1571,25 +1586,25 @@ section
 @keyframes rotateBars
     0%
         transform: rotateZ(0)
-        color: whitesmoke
+        color: $main-font-color
     100%
         transform: rotateZ(180deg)
-        color: #d5d838
+        color: $main-web-color
 
 @keyframes reverseRotateBars
     0%
         transform: rotateZ(0)
-        color: #d5d838
+        color: $main-web-color
     100%
         transform: rotateZ(-180deg)
-        color: whitesmoke
+        color: $main-font-color
 
 @keyframes transformIcon
     0%
         transform: rotateZ(0)
     100%
         transform: rotateZ(360deg)
-        
+
 @keyframes nextTransformIcon
     0%
         transform: rotateZ(0)
