--- a/small.sass
+++ b/small.sass
@@ -723,7 +723,7 @@ section
         border: none
         border-radius: 20px
         transition: box-shadow 0.05s, transform 0.05s
-        i
+        .iconRefresh
             font-size: 20px
             padding: 10px
             color: black
